modules/security/security.tf
# creating dynamic ingress security groups
locals {
  security_groups = {
    ext-alb-sg = {
      name        = "ext-alb-sg"
      description = "for external loadbalncer"

    }

    # security group for bastion
    bastion-sg = {
      name        = "bastion-sg"
      description = "for bastion instances"
    }

    # security group for nginx
    nginx-sg = {
      name        = "nginx-sg"
      description = "nginx instances"
    }

    # security group for IALB
    int-alb-sg = {
      name        = "int-alb-sg"
      description = "IALB security group"
    }


    # security group for webservers
    webserver-sg = {
      name        = "webserver-sg"
      description = "webservers security group"
    }


    # security group for data-layer
    datalayer-sg = {
      name        = "datalayer-sg"
      description = "data layer security group"


    }
  }
}









# # security group for alb, to allow acess from any where for HTTP and HTTPS traffic
# resource "aws_security_group" "ext-alb-sg" {
#   name        = "ext-alb-sg"
#   vpc_id      = aws_vpc.main.id
#   description = "Allow TLS inbound traffic"

#   ingress {
#     description = "HTTP"
#     from_port   = 80
#     to_port     = 80
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   ingress {
#     description = "HTTP"
#     from_port   = 443
#     to_port     = 443
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = merge(
#     var.tags,
#     {
#       Name = "ext-alb-sg"
#     },
#   )

# }

# # security group for bastion, to allow access into the bastion host from you IP
# resource "aws_security_group" "bastion_sg" {
#   name        = "Bastion_sg"
#   vpc_id      = aws_vpc.main.id
#   description = "Allow incoming HTTP connections."

#   ingress {
#     description = "SSH"
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = merge(
#     var.tags,
#     {
#       Name        = "Bastion-SG"
#       Environment = var.environment
#     },
#   )
# }

# #security group for nginx reverse proxy, to allow access only from the extaernal load balancer and bastion instance
# resource "aws_security_group" "nginx-sg" {
#   name   = "nginx-sg"
#   vpc_id = aws_vpc.main.id

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = merge(
#     var.tags,
#     {
#       Name = "nginx-SG"
#     },
#   )
# }

# resource "aws_security_group_rule" "inbound-nginx-http" {
#   type                     = "ingress"
#   from_port                = 443
#   to_port                  = 443
#   protocol                 = "tcp"
#   source_security_group_id = aws_security_group.ext-alb-sg.id
#   security_group_id        = aws_security_group.nginx-sg.id
# }

# resource "aws_security_group_rule" "inbound-bastion-ssh" {
#   type                     = "ingress"
#   from_port                = 22
#   to_port                  = 22
#   protocol                 = "tcp"
#   source_security_group_id = aws_security_group.bastion_sg.id
#   security_group_id        = aws_security_group.nginx-sg.id
# }

# # security group for ialb, to have acces only from nginx reverser proxy server
# resource "aws_security_group" "int-alb-sg" {
#   name   = "my-alb-sg"
#   vpc_id = aws_vpc.main.id

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = merge(
#     var.tags,
#     {
#       Name = "int-alb-sg"
#     },
#   )

# }

# resource "aws_security_group_rule" "inbound-ialb-https" {
#   type                     = "ingress"
#   from_port                = 443
#   to_port                  = 443
#   protocol                 = "tcp"
#   source_security_group_id = aws_security_group.nginx-sg.id
#   security_group_id        = aws_security_group.int-alb-sg.id
# }

# # security group for webservers, to have access only from the internal load balancer and bastion instance
# resource "aws_security_group" "webserver-sg" {
#   name   = "my-asg-sg"
#   vpc_id = aws_vpc.main.id

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = merge(
#     var.tags,
#     {
#       Name = "webserver-sg"
#     },
#   )

# }

# resource "aws_security_group_rule" "inbound-web-https" {
#   type                     = "ingress"
#   from_port                = 443
#   to_port                  = 443
#   protocol                 = "tcp"
#   source_security_group_id = aws_security_group.int-alb-sg.id
#   security_group_id        = aws_security_group.webserver-sg.id
# }

# resource "aws_security_group_rule" "inbound-web-ssh" {
#   type                     = "ingress"
#   from_port                = 22
#   to_port                  = 22
#   protocol                 = "tcp"
#   source_security_group_id = aws_security_group.bastion_sg.id
#   security_group_id        = aws_security_group.webserver-sg.id
# }

# # security group for datalayer to alow traffic from websever on nfs and mysql port and bastiopn host on mysql port
# resource "aws_security_group" "datalayer-sg" {
#   name   = "datalayer-sg"
#   vpc_id = aws_vpc.main.id

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = merge(
#     var.tags,
#     {
#       Name = "datalayer-sg"
#     },
#   )
# }

# resource "aws_security_group_rule" "inbound-nfs-port" {
#   type                     = "ingress"
#   from_port                = 2049
#   to_port                  = 2049
#   protocol                 = "tcp"
#   source_security_group_id = aws_security_group.webserver-sg.id
#   security_group_id        = aws_security_group.datalayer-sg.id
# }

# resource "aws_security_group_rule" "inbound-mysql-bastion" {
#   type                     = "ingress"
#   from_port                = 3306
#   to_port                  = 3306
#   protocol                 = "tcp"
#   source_security_group_id = aws_security_group.bastion_sg.id
#   security_group_id        = aws_security_group.datalayer-sg.id
# }

# resource "aws_security_group_rule" "inbound-mysql-webserver" {
#   type                     = "ingress"
#   from_port                = 3306
#   to_port                  = 3306
#   protocol                 = "tcp"
#   source_security_group_id = aws_security_group.webserver-sg.id
#   security_group_id        = aws_security_group.datalayer-sg.id
# }
